<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">GMapRando</string>
    <string name="app_longname">Trekking tracks</string>
    <string name="action_settings">Settings</string>
    <string name="no_file">No file</string>
    <string name="current_directory">Folder</string>
    <string name="pref_map_title">Map type</string>
    <string name="maptype_summ">Set the map type to display with the track</string>
    <string name="fullscreen">Full screen</string>
    <string name="ign_maptype">IGN rando</string>
    <string name="standard_maptype">Standard</string>
    <string name="hybrid_maptype">Hybrid</string>
    <string name="satellite_maptype">Satellite</string>
    <string name="field_maptype">Field</string>
    <string name="none_maptype">No map</string>
    <string name="record_in_progress">Record in progress&#8230;</string>
    <string name="new_record">New record&#8230;</string>
    <string name="search_hint">Enter address</string>
    <string name="address_menu">Address</string>
    <string name="map_fragment">Map</string>
    <string name="stat_fragment">Info</string>
    <string name="map_frag_desc">Google map</string>
    <string name="stat_frag_desc">Track\'s statistics</string>
    <string name="delete_kml_path_menu">Remove KML track</string>
    <string name="pref_elevation_title">Elevation parameters</string>
    <string name="elevation_source_type">Elevation sensor</string>
    <string name="elevation_source_type_desc">Select the sensor for elevation measurement.</string>
    <string name="elevation_display_type">Elevation type</string>
    <string name="elevation_display_type_desc">Select the type of elevation to be used by the information fragment.</string>
    <string name="altimeter_correction">Compensation from real elevation</string>
    <string name="altimeter_correction_desc">Specify the real evelation value</string>
    <string name="settings">Settings</string>
    <string name="info">info</string>
    <string name="ign_dvp_key_desc">Enter a valid IGN develoment key</string>
    <string name="ign_dvp_key">IGN development key</string>
    <string name="empty_text">---</string>
    <string name="one_km_display_pref">One kilometer area display</string>
</resources>